fix(tabs): stretching while applying mc-stretch-tab within mc-light-tab (#146)

--- a/packages/mosaic/tabs/tab-header.scss
+++ b/packages/mosaic/tabs/tab-header.scss
@@ -76,7 +76,7 @@
     }
 }
 
-.mc-tab-label {
+.mc-tab-label, .mc-tab-light-label {
     .mc-tab-group_stretch-labels & {
         flex-basis: 0;
         flex-grow: 1;
